--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "My personal site",
     "type": "project",
     "require": {
-        "adrorocker/adrostatic": "^0.1.0",
+        "adrorocker/adrostatic": "^0.1.0"
     },
     "minimum-stability": "stable"
 }
